--- a/source/app/components/wi-logplot/template/wi-logplot.html
+++ b/source/app/components/wi-logplot/template/wi-logplot.html
@@ -1,6 +1,7 @@
 <div ng-if="wiLogplot.showToolbar" class="logplot-toolbar-wrapper" ng-class="{'crop-display':wiLogplot.cropDisplay}">
     @@include('./toolbar/index.html')
 </div>
+<!-- <div class="logplot-header" style="display: none;"> -->
 <div class="logplot-header">
     <div class="well-name-container" style="display: none;">
         <!-- <div class="well-name" ng-bind="wiLogplot.wellModel.properties.name"></div> -->
@@ -31,7 +32,7 @@
         </wi-d3>
     </div>
 </div>
-<div class="logplot-footer">
+<div class="logplot-footer" wi-element-ready="wiLogplot.onFooterReady()">
     <div class="well-name-container" ng-if="wiLogplot.showFooter">
         <!-- <div class="well-name" ng-bind="wiLogplot.wellModel.properties.name"></div> -->
         <div style="font-size:14px; font-weight: bold;">List Wells</div>
@@ -40,6 +41,7 @@
         </div>
     </div>
     <div class="footer-icon">
-        <span class="info-frp-32x32 font-size-16" ng-mouseover="wiLogplot.showFooter = true" ng-mouseleave="wiLogplot.showFooter = false"></span>
+        <span class="info-frp-32x32 font-size-16" style="display: absolute" ng-click="wiLogplot.showFooter = !wiLogplot.showFooter" ng-if="!wiLogplot.showFooter"></span>
+        <span class="close-32x32 font-size-16" style="display: absolute" ng-click="wiLogplot.showFooter = !wiLogplot.showFooter" ng-if="wiLogplot.showFooter"></span>
     </div>
 </div>
