--- a/source/less/simpleLayout.less
+++ b/source/less/simpleLayout.less
@@ -74,3 +74,35 @@ div.panel-default, div.panel-default>div.panel-heading {
         }
     }
 }
+
+// Wi Xplot stylesheet
+.wi-xplot-main {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    & > div {
+        display: flex;
+        flex: 1;
+        flex-direction: column;
+    }
+    .wi-xplot-plot-container {
+        flex: 1;
+
+        canvas, svg {
+            position: absolute;
+            left: 0;
+        }
+
+        .axis path {
+            display: true;
+        }
+
+        .axis line {
+            stroke: #888;
+            stroke-opacity: 0.5;
+        }
+        .axis--x text, .axis--y text {
+            display: none;
+        }
+    }
+}
