--- a/source/less/simpleLayout.less
+++ b/source/less/simpleLayout.less
@@ -104,5 +104,13 @@ div.panel-default, div.panel-default>div.panel-heading {
         .axis--x text, .axis--y text {
             display: none;
         }
+        .tick {
+            line {
+                stroke: gray;
+                stroke-width: 1;
+            }
+            .major { stroke-opacity: 0.8; }
+            .minor { stroke-opacity: 0.3; }
+        }
     }
 }
