--- a/source/app/components/wi-xplot/wi-xplot.less
+++ b/source/app/components/wi-xplot/wi-xplot.less
@@ -27,5 +27,13 @@
         .axis--x text, .axis--y text {
             display: none;
         }
+        .tick {
+            line {
+                stroke: gray;
+                stroke-width: 1;
+            }
+            .major { stroke-opacity: 0.8; }
+            .minor { stroke-opacity: 0.3; }
+        }
     }
 }
