--- a/source/app/components/wi-export/wi-export.html
+++ b/source/app/components/wi-export/wi-export.html
@@ -2,13 +2,21 @@
     <div class="left-container">
         <div class="panel panel-default export-left">
             <div style='display:flex;' class='panel-heading'>
-                <h5 style='margin-right:10px;'>Project</h5>
-                <wi-item-dropdown style='flex:1;margin:5px 0;' class='height24px' icon="'project-open-16x16'" on-wi-dropdown-init='wiExport.getProjectList'
+                <h5 style='margin-right:10px;'>Inventory</h5>
+                <!-- <wi-item-dropdown style='flex:1;margin:5px 0;' class='height24px' icon="'project-open-16x16'" on-wi-dropdown-init='wiExport.getProjectList'
                     on-item-changed="wiExport.projectChanged">
-                </wi-item-dropdown>
-                <button style='margin:5px 0 5px 5px;padding:0 10px;' class='btn btn-default' title="Reload project" ng-click="wiExport.refreshProject()">
+                </wi-item-dropdown> -->
+                <!-- <button style='margin:5px 0 5px 5px;padding:0 10px;' class='btn btn-default' title="Reload project" ng-click="wiExport.refreshProject()">
+                    <i class="fa fa-refresh"></i>
+                </button> -->
+                <button style='margin:5px 0 5px 5px;padding:0 10px;' class='btn btn-default pull-right' title="Reload project" ng-click="wiExport.refreshInventory()">
                     <i class="fa fa-refresh"></i>
                 </button>
+                <button style='margin:5px 0px 5px 5px;padding:0 10px;' title="Toggle Well name/File name"
+                    class='btn btn-default'
+                    ng-click="wiExport.switchLabelTooltip(wiExport.inventoryConfig)">
+                <i class="fa fa-exchange"></i>
+            </button>
             </div>
             <div style='background-color:white;border:none;padding-top: 2px;padding-bottom: 2px;' class="panel-heading">
                 <form style='width:100%;display:flex;' ng-submit='wiExport.prjSearch()'>
@@ -23,7 +31,16 @@
             <div style="flex:1;display:flex;padding:0px;" class="panel-body">
                 <wi-scroll id-scroll="exportTreeScroll" style='flex:1;display:flex;flex-direction:column;' up-trigger='wiExport.upTriggerPrj'
                     down-trigger='wiExport.downTriggerPrj'>
-                    <wi-base-treeview name="exportTreeview" config="wiExport.projectConfig" container="wiExport" on-click-function="wiExport.prjClickFunction"
+                    <!-- <wi-base-treeview name="exportTreeview" 
+                        config="wiExport.projectConfig" 
+                        container="wiExport" 
+                        on-click-function="wiExport.prjClickFunction"
+                        filter="{{wiExport.prjFilter}}">
+                    </wi-base-treeview> -->
+                    <wi-base-treeview name="exportTreeview" 
+                        config="wiExport.inventoryConfig" 
+                        container="wiExport" 
+                        on-click-function="wiExport.invClickFunction"
                         filter="{{wiExport.prjFilter}}">
                     </wi-base-treeview>
                 </wi-scroll>
@@ -44,7 +61,7 @@
         <div class='panel panel-default export-center'>
             <div class='panel-heading' style='display:flex;'>
                 <h5 style='flex:1;'>Export Queue</h5>
-                <button style="margin:5px 0;padding:0 10px;" class='btn btn-default' title='purge' ng-click="wiExport.exportQueueItems.length = 0;">
+                <button style="margin:5px 0;padding:0 10px;" class='btn btn-default' title='purge' ng-click="wiExport.clearExportQueueItems()">
                     <span class='ti-brush-alt'></span>
                 </button>
             </div>
@@ -55,8 +72,12 @@
                         size='10'>
                 </form>
             </div>
-            <wi-base-treeview name="ExportQueueTreeview" style="flex:1;overflow-x:hidden;overflow-y:auto;" config="wiExport.exportQueueItems"
-                container="wiExport" on-click-function="wiExport.pendingQueueClickFunction" filter="{{wiExport.queueFilter}}">
+            <wi-base-treeview name="ExportQueueTreeview" 
+                style="flex:1;overflow-x:hidden;overflow-y:auto;" 
+                config="wiExport.exportQueueItems"
+                container="wiExport" 
+                on-click-function="wiExport.exportQueueClickFunction" 
+                filter="{{wiExport.queueFilter}}">
             </wi-base-treeview>
         </div>
     </div>
@@ -82,7 +103,7 @@
                 </form>
             </div>
             <ul>
-                <li ng-repeat='file in wiExport.lasFiles' filter='wiExport.lasFilesFilter'>
+                <li ng-repeat='file in wiExport.lasFiles | filter: wiExport.lasFilesFilter'>
                     <a href="{{file.url}}">
                         <i style="font-size: 16px;z-index:1;color:#aaa;" class="fa fa-file"></i>
                         <b>{{file.name}}</b>
