--- a/source/app/components/wi-export/wi-export.html
+++ b/source/app/components/wi-export/wi-export.html
@@ -13,15 +13,15 @@
                     <i class="fa fa-refresh"></i>
                 </button>
                 <button style='margin:5px 0px 5px 5px;padding:0 10px;' title="Toggle Well name/File name"
-                    class='btn btn-default'
+                    class='btn btn-default pull-right'
                     ng-click="wiExport.switchLabelTooltip(wiExport.inventoryConfig)">
-                <i class="fa fa-exchange"></i>
-            </button>
+                    <i class="fa fa-exchange"></i>
+                </button>
             </div>
             <div style='background-color:white;border:none;padding-top: 2px;padding-bottom: 2px;' class="panel-heading">
                 <form style='width:100%;display:flex;' ng-submit='wiExport.prjSearch()'>
                     <i style="font-size: 16px; line-height:28px;z-index:1;color:#aaa;" class="fa fa-search"></i>
-                    <input type='text' style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue;' ng-model='wiExport.prjFilter'
+                    <input type='text' style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue;' ng-model='wiExport.filter'
                         size='10'>
                 </form>
             </div>
@@ -41,8 +41,16 @@
                         config="wiExport.inventoryConfig" 
                         container="wiExport" 
                         on-click-function="wiExport.invClickFunction"
-                        filter="{{wiExport.prjFilter}}">
+                        filter="{{wiExport.filter}}" 
+                        ng-show="wiExport.from == 'inventory'">
                     </wi-base-treeview>
+                    <wi-base-treeview name="exportTreeview" 
+                    config="wiExport.projectConfig" 
+                    container="wiExport" 
+                    on-click-function="wiExport.projectClickFunction"
+                    filter="{{wiExport.filter}}" 
+                    ng-show="wiExport.from == 'project'">
+                </wi-base-treeview>
                 </wi-scroll>
             </div>
         </div>
