--- a/source/app/components/wi-task/wi-task.html
+++ b/source/app/components/wi-task/wi-task.html
@@ -1,4 +1,4 @@
-<div>
+<div style='position: relative;'>
     <style>
         wi-task wi-tab>div {
             height: calc(100% - 30px);
@@ -117,7 +117,7 @@
                         </div>
                         <div style="flex:1;display:flex;overflow: hidden;flex-direction: column;" class='panel panel-default'>
                             <div class="panel-heading">
-                                <h5>Parameters</h5>
+                                <h5>Default Parameters</h5>
                             </div>
                             <ul style='padding-left:0;margin: 5px;flex:1;overflow-y: auto;'>
                                 <li style="display:flex;flex-direction:row; margin-bottom:5px;" ng-repeat="item in wiTask.taskConfig.parameters track by $index">
@@ -203,7 +203,7 @@
     <div id="dragElement"></div>
     <nav mfb-menu position='br' effect='zoomin'
     active-icon='fa fa-cog' resting-icon='fa fa-magic'
-    toggling-method="hover">
+    toggling-method="click">
         <a mfb-button icon='fa fa-plus-circle' label='Add to workflow'
         ng-click='wiTask.addToWorkflowClick()'></a>
         <a mfb-button icon='fa fa-play-circle-o' label='Run workflow'
