--- a/source/app/components/wi-d3/wi-d3.html
+++ b/source/app/components/wi-d3/wi-d3.html
@@ -1,5 +1,37 @@
 <div wi-element-ready='wiD3.onReady()' wi-right-click='wiD3.showContextMenu($event)' id='{{wiD3.plotAreaId}}' class='d3-region'>
+    <div class='wi-d3-track-container' style='display:flex;' ng-repeat="track in wiD3.getTrackComponents()">
  <!--    <svg id='{{wiD3.svgId}}' class='d3-region-svg' width='100%' height='100%'></svg> -->
+        <wi-d3-log-track ng-if="track.idTrack" 
+            name='{{wiD3.getTrackName(track)}} '
+            properties='track'
+            wi-d3-ctrl='wiD3' 
+            style="display: flex; flex-direction: column; outline: none;">
+        </wi-d3-log-track>
+        <wi-d3-depth-track ng-if="track.idDepthAxis" 
+            name='{{wiD3.getTrackName(track)}}' 
+            wi-d3-ctrl='wiD3'
+            properties='track'
+            style="display: flex; flex-direction: column; outline: none;">
+        </wi-d3-depth-track>
+        <wi-d3-zone-track ng-if="track.idZoneTrack" 
+            name='{{wiD3.getTrackName(track)}}' 
+            wi-d3-ctrl='wiD3' 
+            properties='track'
+            style="display: flex; flex-direction: column; outline: none;">
+        </wi-d3-zone-track>
+        <wi-d3-image-track ng-if="track.idImageTrack" 
+            name='{{wiD3.getTrackName(track)}}' 
+            wi-d3-ctrl='wiD3' 
+            properties='track'
+            style="display: flex; flex-direction: column; outline: none;">
+        </wi-d3-image-track>
+        <wi-d3-object-track ng-if="track.idObjectTrack" 
+            name='{{wiD3.getTrackName(track)}}' 
+            wi-d3-ctrl='wiD3' 
+            properties='track'
+            style="display: flex; flex-direction: column; outline: none;">
+        </wi-d3-object-track>
+    </div>
 </div>
 <div ng-show="wiD3.shouldShowSlider()" wi-element-ready='wiD3.onSliderReady()' style="display:block;margin:10px 20px;flex-basis:5px;backgroun-color:yellow">
     <div style="width:{{wiD3.sliderWidth}}px" class='slider-container'></div>
