--- a/source/app/components/wi-logplot/template/wi-logplot.html
+++ b/source/app/components/wi-logplot/template/wi-logplot.html
@@ -16,6 +16,7 @@
         <wi-slidingbar
             name="{{wiLogplot.slidingbarName}}"
             container-name="{{wiLogplot.containerName}}"
+            wi-logplot-ctrl="wiLogplot"
             ng-init="wiLogplot.getSlidingbarCtrl()">
         </wi-slidingbar>
     </div>
