--- a/source/app/components/wi-xplot/wi-xplot.html
+++ b/source/app/components/wi-xplot/wi-xplot.html
@@ -1,3 +1,3 @@
 <div class="wi-xplot-main" style="display:flex;flex-direction:row;">
-    <div id="{{ wiXplot.plotAreaId }}" wi-element-ready="wiXplot.onReady()"></div>
+    <div id="{{ wiXplot.plotAreaId }}" wi-element-ready="wiXplot.onReady()" wi-right-click='wiXplot.showContextMenu($event)'></div>
 </div>
