--- a/source/components/wi-base-treeview/wi-base-treeview.html
+++ b/source/components/wi-base-treeview/wi-base-treeview.html
@@ -41,7 +41,7 @@
             ng-dblclick="wiBaseTreeview.onDoubleClick($index)">
             <span class='display-inline-block' style='text-indent:10px;' title="{{item.data.unit}}">{{item.data.unit}}</span>
         </div>
-        <div class="wi-parent-choices" ng-if='item.type=="choice"'>
+        <div class="wi-parent-choices" ng-if='item.type.includes("choice")'>
             <select ng-model='item.data.value' ng-if='item.data.choices'
             ng-options="choice as choice.name for choice in item.data.choices track by choice.value"></select>
             <input type="number" ng-model="item.data.value" ng-if="!item.data.choices" step="any">
