--- a/source/app/components/wi-curve-listing/wi-curve-listing.less
+++ b/source/app/components/wi-curve-listing/wi-curve-listing.less
@@ -1,10 +1,12 @@
 wi-curve-listing{
+    display: flex;
+    height: 100%;
+    flex-direction: column;
     .curve-listing-main-content{
         flex: 1;
         display: flex;
         flex-direction: row;
         padding: 5px;
-        height: 100%;
         width:100%;
         background-color:white;
     }
@@ -27,7 +29,6 @@ wi-curve-listing{
     .editing{
         flex: 1;
         overflow: hidden;
-        height: 95%;
     }
     #dataContainer.active:after {
         content: "DROP A CURVE HERE";
