--- a/source/components/wi-base-treeview/wi-base-treeview.html
+++ b/source/components/wi-base-treeview/wi-base-treeview.html
@@ -1,10 +1,10 @@
-<div class="wi-treeview-container" style="background-color:{{wiBaseTreeview.config[$index].data.bgColor||'white'}}"
+<div class="wi-treeview-container"
      ng-class='{"rootview": wiBaseTreeview.name}'
      ng-repeat="item in wiBaseTreeview.config track by $index"
      ng-if='!item.data.deleted'>
-    <div class="wi-parent-node" type="{{wiBaseTreeview.config[$index].type}}"
+    <div class="wi-parent-node" type="{{item.type}}"
         ng-class='{"item-active": item.data.selected}'
-        data="{{wiBaseTreeview.config[$index].id}}"
+        data="{{item.id}}"
         wi-right-click="wiBaseTreeview.onClick($index, $event, item); wiBaseTreeview.showContextMenuFunction($event, $index, item)"
         wi-element-ready="wiBaseTreeview.onReadyFunction();"
         ng-hide="item.data.hide"
@@ -22,7 +22,7 @@
                 ng-dblclick="wiBaseTreeview.onDoubleClick($index);">
                 <div class="display-inline-block margin-right-0_5em">
                     <span class="{{item.data.icon}}"></span>
-                    <div ng-show="wiBaseTreeview.showId && wiBaseTreeview.config[$index].id" class='wi-parent-id'>{{wiBaseTreeview.config[$index].id}}</div>
+                    <div ng-show="wiBaseTreeview.showId && item.id" class='wi-parent-id'>{{item.id}}</div>
                 </div>
                 <span ng-if="wiBaseTreeview.isShowParentName && item.parentData">{{item.parentData.label}} /</span>
                 <span ng-if="wiBaseTreeview.isShowParentName && item.parentDataArr" ng-repeat="parentData in item.parentDataArr">{{parentData.label}} /&nbsp;</span>
