--- a/source/app/components/wi-properties/wi-properties.html
+++ b/source/app/components/wi-properties/wi-properties.html
@@ -1,5 +1,5 @@
 <div style="height: 100%; overflow-y: auto; overflow-x: hidden">
-  <wi-list name="{{config.name}}" heading="{{config.heading}}" items="config.data"
+  <wi-list name="{{config.name}}" heading="{{config.heading}}" items="config.data" on-change-func="config.onChange"
            ng-repeat="config in wiProperties.listConfig">
   </wi-list>
 </div>
