--- a/source/app/components/wi-task/wi-task.html
+++ b/source/app/components/wi-task/wi-task.html
@@ -1,7 +1,11 @@
 <div style='position: relative;'>
     <style>
-        wi-task wi-tab>div {
+        wi-task #mainTab wi-tab>div {
             height: calc(100% - 30px);
+        }
+        wi-task #dragTab wi-tab>div {
+            height: calc(100% - 117px);
+            border: none;
         }
 
         wi-task .bordered {
@@ -58,7 +62,7 @@
         }
     </style>
     <div class="form-group">
-        <wi-tabset>
+        <wi-tabset id='mainTab'>
             <wi-tab heading="Configure Inputs">
                 <div style='padding:10px;display:flex;flex-direction:row;height:100%;'>
                     <div class='panel panel-default tree-side'>
@@ -171,12 +175,16 @@
                             <i style="position:absolute;line-height:2.5em;left:0.5em;font-size:14px;" class="fa fa-search"></i>
                             <input type='text' class='form-control' style='text-indent:1.5em;' ng-model='wiTask.prjFilter' size='10'>
                         </div>
-                        <wi-scroll id-scroll="'projectTreeScroll'" style='flex:1;display:flex;flex-direction:column;' up-trigger='wiTask.upTriggerPrj'
-                            , down-trigger='wiTask.downTriggerPrj'>
-                            <wi-base-treeview id='__projectWellTree' name="projectTreeview" config="wiTask.projectConfig" container="wiTask" on-click-function="wiTask.prjClickFunction"
-                                filter="{{wiTask.prjFilter}}" show-id="false">
-                            </wi-base-treeview>
-                        </wi-scroll>
+                        <div style='flex:1;display:flex;flex-direction:column;'>
+                            <wi-tabset position='bottom' nav-align='center' id='dragTab'>
+                                <wi-tab heading='Datasets'>
+                                    <wi-base-treeview id='__projectWellTree' name="projectTreeview" config="wiTask.projectConfig" container="wiTask" on-click-function="wiTask.prjClickFunction"
+                                        filter="{{wiTask.prjFilter}}" show-id="false">
+                                    </wi-base-treeview>
+                                </wi-tab>
+                                <wi-tab heading='Zonation'></wi-tab>
+                            </wi-tabset>
+                        </div>
                     </div>
                     <div class='wi-droppable' style="flex:2;margin-left: 5px;" wi-element-ready="wiTask.droppableSetting();">
                         <div class="panel panel-default" style='height: 100%;display:flex;flex-direction: column;'>
